docs(glossary): agregar JavaDoc y comentarios explicativos